Freescale hypervisor management driver
Add the Freescale hypervisor management driver and implement an ioctl for
the FH_MEMCPY hypercall.

Signed-off-by: Timur Tabi <timur@freescale.com>
Signed-off-by: Stuart Yoder <stuart.yoder@freescale.com>

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -173,6 +173,14 @@ config ENCLOSURE_SERVICES
 	  driver (SCSI/ATA) which supports enclosures
 	  or a SCSI enclosure device (SES) to use these services.
 
+config FSL_HV_MANAGER
+	tristate "Freescale hypervisor management driver"
+	depends on FSL_HYPERVISOR
+	default FSL_HYPERVISOR
+	help
+	  This driver allows applications to communicate with the Freescale
+	  Hypervisor.
+
 config SGI_XP
 	tristate "Support communication between SGI SSIs"
 	depends on NET
