powerpc/epapr-hv: Add support for ePAPR PIC controller
Signed-off-by: Ashish Kalra <ashish.kalra@freescale.com>
Signed-off-by: Stuart Yoder <stuart.yoder@freescale.com>
Signed-off-by: Timur Tabi <timur@freescale.com>
Signed-off-by: Kumar Gala <kumar.gala@freescale.com>

--- a/arch/powerpc/platforms/Kconfig
+++ b/arch/powerpc/platforms/Kconfig
@@ -66,6 +66,11 @@ config IPIC
 	bool
 	default n
 
+config PPC_EPAPR_HV_PIC
+	bool
+	depends on PPC_EPAPR_HV
+	default n
+
 config MPIC
 	bool
 	default n
