powerpc/epapr-hv: add ePAPR hypervisor byte channel driver
The ePAPR hypervisor byte channel driver is a simple (read/write/poll)
character driver that exports a /dev interface for byte channels.  Applications
can open the appropriate /dev/bcx (where 'x' is the byte channel handle) and
read/write to the byte channel.

Signed-off-by: Stuart Yoder <stuart.yoder@freescale.com>
Signed-off-by: Timur Tabi <timur@freescale.com>

--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -1113,5 +1113,14 @@ config DEVPORT
 
 source "drivers/s390/char/Kconfig"
 
+config PPC_EPAPR_HV_BYTECHAN
+	tristate "Freescale hypervisor byte channel driver"
+	depends on PPC_EPAPR_HV
+	default PPC_EPAPR_HV
+	help
+	  This driver creates /dev entries for each ePAPR hypervisor byte
+	  channel, thereby allowing applications to communicate with byte
+	  channels as if they were serial ports.
+
 endmenu
 
