powerpc/fsl-hv: Add Freescale Hypervisor specific hcalls
Wrapper functions for each of the Freescale hypervisor system calls.

The hypercalls are implemented as inline assembly (and thus in a .h file),
rather than assembly language functions in a .S file, for optimization.

Signed-off-by: Timur Tabi <timur@freescale.com>
Signed-off-by: Scott Wood <scottwood@freescale.com>
Signed-off-by: Stuart Yoder <stuart.yoder@freescale.com>
Signed-off-by: Kumar Gala <galak@kernel.crashing.org>

--- a/arch/powerpc/platforms/85xx/Kconfig
+++ b/arch/powerpc/platforms/85xx/Kconfig
@@ -191,5 +191,11 @@ config P5020_DS
 
 endif # FSL_SOC_BOOKE
 
+config FSL_HYPERVISOR
+	bool
+	select PPC_EPAPR_HV
+	help
+	  This options enables support for Freescale Hypervisor
+
 config TQM85xx
 	bool
