powerpc/epapr-hv: Add ePAPR Hypervisor hcalls
Wrapper functions for each of the ePAPR hypervisor system calls.

The hypercalls are implemented as inline assembly (and thus in a .h file),
rather than assembly language functions in a .S file, for optimization.

Signed-off-by: Timur Tabi <timur@freescale.com>
Signed-off-by: Stuart Yoder <stuart.yoder@freescale.com>
Signed-off-by: Diana CRACIUN <Diana.Craciun@freescale.com>
Signed-off-by: Kumar Gala <galak@kernel.crashing.org>

--- a/arch/powerpc/platforms/Kconfig
+++ b/arch/powerpc/platforms/Kconfig
@@ -29,6 +29,12 @@ config PPC_NATIVE
 	  a hypervisor. This option is not user-selectable but should
 	  be selected by all platforms that need it.
 
+config PPC_EPAPR_HV
+	bool
+	depends on BOOKE
+	help
+	  Support for running under ePAPR specified hypervisor environment
+
 config PPC_OF_BOOT_TRAMPOLINE
 	bool "Support booting from Open Firmware or yaboot"
 	depends on 6xx || PPC64
