powerpc/85xx: Update p5020 DS board support
Update P5020DS code to deal with network and other refactoring.

Signed-off-by: Kumar Gala <galak@kernel.crashing.org>

--- a/arch/powerpc/platforms/85xx/Kconfig
+++ b/arch/powerpc/platforms/85xx/Kconfig
@@ -193,6 +193,7 @@ config P5020_DS
 	select SWIOTLB
 	select MPC8xxx_GPIO
 	select HAS_RAPIDIO
+	select HAS_FSL_PAMU
 	select HAS_FSL_QBMAN
 	select HAS_FSL_PME
 	select FSL_HYDRA_DS_MDIO if PHYLIB
