fsl_qbman: Add drivers for Freescale DPAA Qman & Bman
Signed-off-by: Geoff Thorpe <Geoff.Thorpe@freescale.com>
Signed-off-by: Kumar Gala <galak@kernel.crashing.org>
Signed-off-by: Andy Fleming <afleming@freescale.com>
Signed-off-by: Jeffrey Ladouceur <Jeffrey.Ladouceur@freescale.com>
Signed-off-by: Haiying Wang <Haiying.Wang@freescale.com>

--- a/arch/powerpc/platforms/85xx/Kconfig
+++ b/arch/powerpc/platforms/85xx/Kconfig
@@ -161,6 +161,7 @@ config P3041_DS
 	select SWIOTLB
 	select MPC8xxx_GPIO
 	select HAS_RAPIDIO
+	select HAS_FSL_QBMAN
 	help
 	  This option enables support for the P3041 DS board
 
@@ -173,6 +174,7 @@ config P4080_DS
 	select MPC8xxx_GPIO
 	select HAS_RAPIDIO
 	select HAS_FSL_PAMU
+	select HAS_FSL_QBMAN
 	help
 	  This option enables support for the P4080 DS board
 
@@ -187,6 +189,7 @@ config P5020_DS
 	select SWIOTLB
 	select MPC8xxx_GPIO
 	select HAS_RAPIDIO
+	select HAS_FSL_QBMAN
 	help
 	  This option enables support for the P5020 DS board
 
