dpaa_eth: Add IEEE 1588 support for IXXAT stack
The P4080 silicon supports IEEE 1588 function in all Gbps modes and all
full-duplex 10/100 modes except SGMII and in 10GEC. The driver supports
RGMII and SGMII IEEE 1588 function only.

Signed-off-by: Mingkai Hu <Mingkai.hu@freescale.com>

--- a/drivers/net/dpa/Makefile
+++ b/drivers/net/dpa/Makefile
@@ -10,6 +10,7 @@ EXTRA_CFLAGS += -I$(NET_DPA)
 
 #Netcomm SW tree
 obj-$(CONFIG_FSL_FMAN) += NetCommSw/
+obj-$(CONFIG_FSL_DPA_1588) += dpaa_1588.o
 obj-$(CONFIG_DPA) += fsl-mac.o fsl-dpa.o
 obj-$(CONFIG_DPA_OFFLINE_PORTS) += fsl-oh.o
 
